@@ -16,7 +16,7 @@ Dist::Zilla::Plugin::Test::CPAN::Changes    = 0.005    ; test failures
 Dist::Zilla::Plugin::Test::Compile          = 1.112400 ; bugfixes & test suite (& new name in 1.112390)
 Dist::Zilla::Plugin::Test::Perl::Critic     = 2.112410 ; new name (& bugfixes in 1.111450)
 Dist::Zilla::Plugin::Test::DistManifest     = 2.0.1    ;
-Dist::Zilla::Plugin::EOLTests               = 0.02     ; Also checks for trailing whitespace
+Dist::Zilla::Plugin::Test::EOL              = 0
 Dist::Zilla::Plugin::Test::Kwalitee         = 2.020000 ; bunch o' fixes
 Dist::Zilla::Plugin::MetaTests              = 0        ; core
 Dist::Zilla::Plugin::Test::MinimumVersion   = 2.0.1    ;
