@@ -25,10 +25,10 @@ subtest 'default' => sub {
         'tests are all there') or diag explain \@tests;
 
     my @xtests = map $_->name =~ m{^xt/} ? $_->name : (), $tzil->files->flatten;
-    is_filelist(\@xtests, [qw(          xt/author/critic.t              xt/release/kwalitee.t
-            xt/release/unused-vars.t    xt/release/minimum-version.t    xt/release/dist-manifest.t
-            xt/release/portability.t    xt/release/pod-coverage.t       xt/release/test-version.t
-            xt/release/eol.t            xt/release/cpan-changes.t       xt/release/synopsis.t
+    is_filelist(\@xtests, [qw(          xt/author/critic.t              xt/author/test-eol.t
+            xt/release/kwalitee.t       xt/release/unused-vars.t        xt/release/minimum-version.t
+            xt/release/dist-manifest.t  xt/release/portability.t        xt/release/pod-coverage.t
+            xt/release/test-version.t   xt/release/cpan-changes.t       xt/release/synopsis.t
             xt/release/no-tabs.t        xt/release/pod-linkcheck.t      xt/release/pod-syntax.t
             xt/release/distmeta.t       xt/release/meta-json.t          xt/release/mojibake.t)],
         'xtests are all there') or diag explain \@xtests;
