@@ -2,6 +2,7 @@ Changelog for Dist::Zilla::PluginBundle::TestingMania
 
 {{$NEXT}}
  * List prereqs as prereqs instead of use-ing them [Caleb Cushing]
+ * Use DZP::Test::EOL (an author test) instead of EOLTests (a release test) [GH #13, thanks to Caleb Cushing]
 
 0.14      2011-09-08
  * Packaging updates
